fixed overflow by giving elements container fixed height, changed up width of elements container as well

--- a/src/app/components/game-screen/game-screen.scss
+++ b/src/app/components/game-screen/game-screen.scss
@@ -3,8 +3,8 @@
 }
 
 .game-screen-container {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,9 +25,9 @@
 }
 
 .game-board-elements-container {
-    flex-grow: 1;
     border: 1px solid black;
-    width: 50%;
+    height: 80vh;
+    width: 60%;
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
